# project_1

./: AddAutomaton.h  Automaton.h  CMakeLists.txt  CommaAutomaton.h  CommentAutomaton.h  FactsAutomaton.h  IDAutomaton.h  LeftParenAutomaton.h  Lexer.cpp  Lexer.h  MultiplyAutomaton.h  PeriodAutomaton.h  QmarkAutomaton.h  QueriesAutomaton.h  RightParenAutomaton.h  RulesAutomaton.h  SchemesAutomaton.h  StringAutomaton.h  Token.cpp  Token.h  WhitespaceAutomaton.h  main.cpp
